# cpp_cache

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Version.h.in  main.cpp
.github/workflows/: cmake.yaml
Cache/: CMakeLists.txt  ICache.h  SimpleInfiniteCache.h
include/l4/: ICache.h  LRUCache.h  NoOpCache.h  SimpleInfiniteCache.h
src/tests/: LRUCacheTests.cpp  SimpleInfiniteCacheTests.cpp
